@@ -3,6 +3,7 @@ emma (0.3) unstable; urgency=low
   * fixed field escaping at order-change
   * introduced config directory
   * first plugin system
+  * first table_editor plugin 
  -- Florian Schmidt <schmidt_florian@gmx.de>  
  
 emma (0.2) unstable; urgency=low
